# governance-runtime

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  DM_SCRIPT.md  README.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: ci.yml
NOTES/: SHARING_CLEAN.md
config/: policy_config_default_v0.json
examples/: README.md  example_input_money.json  pep_wrapper_demo.py
governance_runtime/: __init__.py  __main__.py  cli.py  pep_sim.py
governance_runtime/policy/: decide.py
spec/: approval_token_schema_v0.md  effects_taxonomy_v0.md  policy_contract_v0.md
tests/: conftest.py  test_action_overrides.py  test_action_policy_config.py  test_cli_action_effects.py  test_cli_config_commands.py  test_cli_config_show.py  test_cli_demo_seeded.py  test_cli_demo_smoke.py  test_cli_doctor_smoke.py  test_cli_domain_wizard_smoke.py  test_cli_explain_and_config_remove.py  test_cli_policy_show.py  test_cli_policy_wizard_login_domain_tune.py  test_cli_policy_wizard_smoke.py  test_cli_receipt.py  test_cli_smoke.py  test_cli_sugar.py  test_cli_wizard_smoke.py  test_console_script.py  test_decide_smoke.py  test_domain_suffix_matching.py  test_login_profiles.py  test_new_actions.py  test_pep_sim_enforcement.py  test_pep_sim_login_domains.py  test_pep_sim_overrides_and_commit_points.py  test_quiz_v0_1.py  test_quiz_v0_2.py  test_url_domain_parsing.py
